修改博客布局样式

--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: Dylan的博客
 subtitle: ""
-description: "React TypeScript"
+description: "Dylan的博客"
 keywords:
-author: dylan
+author: Dylan
 language: zh-CN
 timezone: ""
 
