--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -117,7 +117,7 @@ menu:
   # tags: tags
   #about: /about/ || fa fa-user
   tags: /tags/ || fa fa-tags
-  categories: /categories/ || fa fa-categories
+  categories: /categories/ || fas fa-th
   archives: /archives/ || fa fa-archive
   #schedule: /schedule/ || fa fa-calendar
   #sitemap: /sitemap.xml || fa fa-sitemap
