--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -9,6 +9,10 @@
 # Useful if you want to comment some options from NexT `_config.yml` by `next.yml` without editing default config.
 override: false
 
+auto_excerpt:
+  enable: true  # 开启自动摘要提取
+  length: 150
+
 # Console reminder if new version released.
 reminder: false
 
@@ -518,7 +522,7 @@ pjax: false
 
 # FancyBox is a tool that offers a nice and elegant way to add zooming functionality for images.
 # For more information: https://fancyapps.com/fancybox
-fancybox: false
+fancybox: true
 
 # A JavaScript library for zooming images like Medium.
 # Do not enable both `fancybox` and `mediumzoom`.
@@ -872,6 +876,7 @@ canvas_ribbon:
 # Be aware that you would better use the same version as internal ones to avoid potential problems.
 # Remember to use the https protocol of CDN files when you enable https on your site.
 vendors:
+  reading_progress: //cdn.jsdelivr.net/gh/theme-next/theme-next-reading-progress@1/reading_progress.min.js
   # Internal path prefix.
   _internal: lib
 
